tests/suite/similar-names/fail/FailFunction.hs

module Main where

helloWorld :: IO ()
helloWorld = print "helloWorld"

helloworld :: IO ()
helloworld = print "helloworld"

main = do
  helloWorld
  helloworld

