tests/suite/similar-names/fail/FailFunction.stderr

tests/suite/similar-names/fail/FailFunction.hs:8:1: error:
    Multiple declarations with names differing only in case.
    Declared at: tests/suite/similar-names/fail/FailFunction.hs:5:1
                 tests/suite/similar-names/fail/FailFunction.hs:8:1
